fix(form): fix overlap in non-stack scenario

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -76,10 +76,14 @@
 
   &.-stack {
     flex-flow: row wrap;
+
+    .form-label {
+      flex: 1 0 100%;
+    }
   }
 
-  .form-label {
-    flex: 1 0 100%;
+  &.-no-overflow {
+    overflow: hidden;
   }
 }
 
